--- a/entry-2/style.css
+++ b/entry-2/style.css
@@ -3,6 +3,11 @@ p {
     font-size: 20px;
     font-family: Cochin;
 }
+
 .orange-paragraph {
     color:darkorange;
+}
+
+#smallest {
+    font-size: 10px;
 }
