--- a/entry-3/style.css
+++ b/entry-3/style.css
@@ -1,17 +1,32 @@
 
+ 
 p { 
     text-align: center; 
     color: white;
     font-family: 'Times New Roman', Times, serif;
     font-size: medium;
     text-shadow: 2px 4px 10px white;
+    position: absolute;
 }
 
-.img1 { 
+#star-six {
+    width: 0;
+    height: 0;
+    border-left: 50px solid transparent;
+    border-right: 50px solid transparent;
+    border-bottom: 100px solid white;
     position: relative;
-    float:right;
-    top: 10px;
-    right: 10px;
-    width: 100px;
-    height: 120px;
-}
+  }
+  #star-six:after {
+    width: 0;
+    height: 0;
+    border-left: 50px solid transparent;
+    border-right: 50px solid transparent;
+    border-top: 100px solid white;
+    position: absolute;
+    content: "";
+    top: 100px;
+    left: 900px;
+  }
+
+
