--- a/entry-2/style.css
+++ b/entry-2/style.css
@@ -1,13 +1,23 @@
-p {
-    color:tomato;
-    font-size: 20px;
-    font-family: Cochin;
+
+h1 {
+    color: white;
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 50px;
+        text-shadow: 2px 4px 10px white;
+        text-align: center;
+        
+
 }
 
-.orange-paragraph {
-    color:darkorange;
-}
+body {
 
-#smallest {
-    font-size: 10px;
-}
+        color: white;
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 20px;
+        text-shadow: 2px 4px 10px white;
+        
+    }
+
+    a {
+        color: white;
+      }
