--- a/entry-4/style.css
+++ b/entry-4/style.css
@@ -69,7 +69,7 @@
 }
 
 .img1:hover {
-    opacity: 1; /* Changed from 100 to 1 */
+    opacity: 1; 
 }
 
 .img2 {
@@ -106,3 +106,4 @@
 
 .img5:hover {
     opacity: 1; 
+}
