--- a/entry-5/style.css
+++ b/entry-5/style.css
@@ -44,8 +44,19 @@
 }
 
 .form2 {
-    font-size: 20px; 
+    margin: 20px auto; 
+    width: 90%; 
+    max-width: 400px;
+    text-align: center; 
 }
+
+
+input[type="submit"] {
+    padding: 10px 20px; 
+    font-size: 18px; 
+    cursor: help; 
+}
+
 
 .img1, .img2, .img3, .img4, .img5 {
     opacity: 0;
