--- a/entry-5/style.css
+++ b/entry-5/style.css
@@ -17,7 +17,7 @@
 }
 
 .paragraph1 p, .paragraph2 p, .paragraph3 p {
-    color: transparent;
+    color: white;
     font-family: 'Times New Roman', Times, serif;
     transition: 300ms ease;
     font-size: 1.5em; 
