--- a/entry-5/style.css
+++ b/entry-5/style.css
@@ -1,80 +1,12 @@
-.paragraph1, .paragraph2, .paragraph3 {
-    width: 90%; 
-    position: absolute;
-    left: 5%; 
+.dragme{
+    position:relative;
+    width: 270px;
+    height: 203px;
+    cursor: move;
 }
-
-.paragraph1 {
-    bottom: 20px;
-}
-
-.paragraph2 {
-    bottom: 200px;
-}
-
-.paragraph3 {
-    bottom: 400px;
-}
-
-.paragraph1 p, .paragraph2 p, .paragraph3 p {
-    color: transparent;
-    font-family: 'Times New Roman', Times, serif;
-    transition: 300ms ease;
-    font-size: 1.5em; 
-}
-
-.paragraph1:hover p,
-.paragraph2:hover p,
-.paragraph3:hover p {
-    color: white;
-    text-shadow: 2px 4px 10px white;
-}
-
-.form1 {
-    display: inline-block;
-    position: absolute;
-    color: white;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 20px; 
-    text-shadow: 2px 4px 10px white;
-    top: 30px; 
-    left: 5%; 
-    width: 90%; 
-    overflow: hidden;
-}
-
-.form2 {
-    margin: 20px auto; 
-    width: 90%; 
-    max-width: 400px;
-    text-align: center; 
-}
-
-
-
-.img1, .img2, .img3, .img4, .img5 {
-    opacity: 0;
-    transition: 300ms ease;
-}
-
-.img1:hover,
-.img2:hover,
-.img3:hover,
-.img4:hover,
-.img5:hover {
-    opacity: 1; 
-}
-
-@media (max-width: 768px) {
-    .paragraph1 p, .paragraph2 p, .paragraph3 p {
-        font-size: 1.2em; 
-    }
-
-    .form1 {
-        font-size: 18px; 
-    }
-
-    .form2 {
-        font-size: 18px; 
-    }
+#draggable {
+    background-color: #ccc;
+    border: 1px solid #000;
+    width: 200px;
+    height:auto;
 }
