--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+body {
+    background-image: url("IMG_4721.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed; 
+    background-size: cover;
+    background-position: center; 
+    margin: 0; 
+    font-family: 'Times New Roman', Times, serif; 
+}
 .header {
     background-color: black;
     color: white;
