--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("IMG_4721.png");
+    background-image: url("IMG_4721.PNG");
     background-repeat: no-repeat;
     background-attachment: fixed; 
     background-size: cover;
