--- a/entry-5/style.css
+++ b/entry-5/style.css
@@ -1,7 +1,7 @@
 .dragme{
     position:relative;
-    width: 270px;
-    height: 203px;
+    width: 250px;
+    height: auto;
     cursor: move;
 }
 #draggable {
