--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
-    background-image: url("IMG_4721.PNG");
+    background-image: url("IMG_4721 2.PNG");
     background-repeat: no-repeat;
     background-attachment: fixed; 
     background-size: cover;
-    background-position: relative; 
+    background-position: center; 
     margin: 0; 
     font-family: 'Times New Roman', Times, serif; 
 }
