--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed; 
     background-size: cover;
-    background-position: center; 
+    background-position: relative; 
     margin: 0; 
     font-family: 'Times New Roman', Times, serif; 
 }
+
 .header {
     background-color: black;
     color: white;
