--- a/entry-2/style.css
+++ b/entry-2/style.css
@@ -1,5 +1,19 @@
-body {
-    background-image: url("IMG_4787.PNG");
+#random{
+    /* BOX MODEL */
+    width: 100%;
+    height: 700px;
+    border: 1px solid black;
+    padding:20px;
+    
+    /* ENHANCEMENT */
+    background-image: url('bg.PNG');
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;  
+  }
+
+  body {
+    background-image: url("bg.PNG");
     background-repeat: no-repeat;
     background-attachment: fixed; 
     background-size: cover;
