--- a/entry-3/style.css
+++ b/entry-3/style.css
@@ -1,37 +1,41 @@
 
 
-
-
-p { 
-    display:flex;
-    justify-content: center;
+body {
+    background-image: url("bg.PNG");
+    background-repeat: no-repeat;
+    background-attachment: fixed; 
+    background-size: cover;
+    background-position: relative; 
+    margin: 0; 
+    font-family: 'Times New Roman', Times, serif; 
+  }
+  .header {
+    background-color: black;
     color: white;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 2em;
-    text-shadow: 2px 4px 10px white;
-    position: absolute;
-    bottom: 0;
-    left: 50px;
+    text-align: center;
+    padding: 50px;
 }
-
-.form1 {
-    display: inline-block;
-    position: absolute;
-    color: white;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 20 px;
-    text-shadow: 2px 4px 10px white;
-    top: 30px;
-    left: 200px;
-    overflow: hidden;
+.webname {
+    position: fixed;  
+    top: 0;           
+    right: 0;  
+    padding: 10px;       
+    width: 500px;    
+    height: auto;     
+    z-index: 9999;    
 }
-
-.form2 {
-    bottom:100 px;
-    left: 500 px;
+#container {
+    font-size: 1 rem;
+    position: fixed;
+    bottom: 20%;
+    left: 30%;
+    color: black;
+    text-shadow: 2px 2px 5px black; /* Adding visible text shadow */
+    background: white;
+    justify-content: center; /* Centers content horizontally */
+    align-items: center; /* Centers content vertically */
+    text-align: center;
+    padding: 20px;
 }
-
-
-
 
 
