--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("IMG_4721.PNG");
+    background-image: url("imgbg.PNG");
     background-repeat: no-repeat;
     background-attachment: fixed; 
     background-size: cover;
@@ -12,61 +12,135 @@ body {
     background-color: black;
     color: white;
     text-align: center;
-    padding: 10px;
+    padding: 50px;
 }
 
-h1 {
-    margin: 0;
+.popup1, .popup2 {
+    max-width: 100%;  
+    height: auto;      
 }
 
-.entry1, .entry2, .entry3, .entry4, .entry5 {
-    opacity: 0;
-    transition: opacity 300ms ease;
+.links {
+    position:absolute;
+    display: flex;
+  flex-wrap: wrap;
+  height: 600px;
+  width: 230px;
+  right: 30px;
+  top:180px;
+}
+.popup1 {
+
+        width: 40%;         
+        position: relative; 
+        z-index: 5;         
+        margin: 0 auto;     
+        height: auto;       
+        padding: 20px;    
+        overflow: hidden;   
+    }
+
+
+.popup1-gifs {
+        position: absolute; 
+        left: 530px;
+        bottom: 70px;     
+        z-index: 10;       
+        width: 30%;         
+        height: auto;
+        display: flex;
+        gap: 5px;          
+    }
+      
+.gif {
+    max-width: 25%;         
+    max-height: auto; 
+    object-fit: cover; 
+    padding: 2px;
 }
 
-.entry1:hover,
-.entry2:hover,
-.entry3:hover,
-.entry4:hover,
-.entry5:hover {
-    opacity: 1; 
+.popup2 {
+    width: 30%;        
+    position: relative;
+    z-index: 10;
+    height: auto;      
 }
 
-.description {
-    opacity: 0; 
-    position: absolute;
-    background-color: white;
-    color: black;
-    padding: 10px;
-    white-space: nowrap; 
-    transition: opacity 300ms ease; 
+
+.column {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;    
+    justify-content: flex-start;
+    gap: 20px;
+    margin-left: 20px;
+    width: auto;        
+    height: auto;
 }
 
-a:hover .description {
-    opacity: 1; 
+
+.container {
+    position: relative; 
+    display: flex;
+    justify-content: center; 
+    align-items: center;    
+    width: 100%;
+    height: auto;
 }
 
-.description1 {
-    bottom: 20px;
-    left: 400px; 
+.webname {
+    position: fixed;  
+    top: 0;           
+    right: 0;  
+    padding: 10px;       
+    width: 500px;    
+    height: auto;     
+    z-index: 9999;    
 }
 
-.description2 {
-    top: 100px;
-    right: 230px; 
+.diary {
+    position: absolute; 
+    left: 100px;
+    top: 70px;     
+    z-index: 10;       
+    width: 17%;         
+    height: 38%;
+    display: flex;
+    overflow-x: hidden;
+    overflow-y: auto;
+    gap: 5px;    
 }
+.h3 { font-size: 2 em;}
 
-.description3 {
-    top: 500px;
-    left: 670px; 
-}
+.p { font-size: 1 em;
+    }
+@media (max-width: 768px)  {
+    .column {
+        flex-direction: row; /* Stack the images vertically on small screens */
+        align-items: center; /* Center images horizontally */
+    }
 
-.description4 {
-    top: 400px;
-    left: 300px; 
-}
+    .popup1 {
+        left: 10%;
+        bottom: 5%;     /* Adjust placement for smaller screens */
+        width: 50%;    /* Allow full width for GIFs container */
+    }
 
-.description5 {
-    bottom: 100px;
-    right: 300px; 
+    .popup1-gifs {
+        display: none;
+        }
+
+    .popup2 {
+        width: 70%; /* Make popup2 smaller (50% of the container's width) */
+    }
+
+    .webname {
+        width: 350px;  /* Adjust the width of the webname image on smaller screens */
+        top: 10px;      /* Move it down a little from the top */
+    }
+.diary { left: 15%;
+    height: 22%;
+    width:40%;
 }
+}
+  
