--- a/entry-8/style.css
+++ b/entry-8/style.css
@@ -8,7 +8,22 @@ body {
         margin: 0; 
         font-family: 'Times New Roman', Times, serif; 
     }
-
+    .header {
+        background-color: black;
+        color: white;
+        text-align: center;
+        padding: 50px;
+        z-index: 3; 
+    }
+    .webname {
+        position: fixed;  
+        top: 0;           
+        right: 0;  
+        padding: 10px;       
+        width: 500px;    
+        height: auto;     
+        z-index: 9999;    
+    }
 
 #door-container {
     position: absolute;
@@ -25,6 +40,7 @@ body {
     transform: translateY(-50%);
     width: 25%; /* Adjust as needed */
     height: auto;
+    z-index: 2;
 
 }
 
@@ -58,3 +74,20 @@ body {
     }
 }
 
+.diary {
+    position: absolute; 
+    left: 300px;
+    top: 70px;     
+    z-index: 1;       
+    width: 50%;         
+    height: 38%;
+    display: flex;
+    overflow-x: hidden;
+    overflow-y: auto;
+    gap: 5px;  
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 1.5em;
+    color: white;
+    text-shadow: 2px 4px 10px white;
+    padding: 30px;
+}    
