--- a/style.css
+++ b/style.css
@@ -29,6 +29,17 @@ body {
   right: 30px;
   top:180px;
 }
+.links2 {
+    position: absolute; 
+    left: 600px;
+    top: 300px;     
+    z-index: 10;       
+    width: 17%;         
+    height: 38%;
+    display: flex;
+    gap: 5px;  
+}
+
 .popup1 {
 
         width: 40%;         
